@@ -1,3 +1,9 @@
+Mon Feb 23 15:26:39 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* string.c (rb_str_split_m): raise ArgumentError at broken string
+	  not RegexpError, as Regexp is not involved in.
+	  [ruby-core:68229] [Bug #10886]
+
 Mon Feb 23 07:25:29 2015  Benoit Daloze  <eregontp@gmail.com>
 
 	* time.c: Zone encoding should be US-ASCII if all 7-bits. Fix r46907.
